--- a/image classification/ImageClassification.ipynb
+++ b/image classification/ImageClassification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6d095f1f",
    "metadata": {},
    "outputs": [],
@@ -31,6 +31,7 @@
     }
    ],
    "source": [
+    "#Checking TF version\n",
     "print('Using TensorFlow version', tf.__version__)"
    ]
   },
