--- a/image classification/ImageClassification.ipynb
+++ b/image classification/ImageClassification.ipynb
@@ -62,8 +62,8 @@
     "ssl._create_default_https_context = ssl._create_unverified_context\n",
     "\n",
     "\n",
-    "from tensorflow.keras.datasets import mnist\n",
-    "(x_train, y_train), (x_test, y_test) = mnist.load_data()"
+    "# from tensorflow.keras.datasets import mnist\n",
+    "# (x_train, y_train), (x_test, y_test) = mnist.load_data()"
    ]
   },
   {
