adding unsupervised models project

--- a/image classification/ImageClassification.ipynb
+++ b/image classification/ImageClassification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6d095f1f",
    "metadata": {},
    "outputs": [],
@@ -19,9 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow version 2.18.0\n"
+     ]
+    }
+   ],
    "source": [
     "#Checking TF version\n",
     "print('Using TensorFlow version', tf.__version__)"
@@ -37,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,9 +66,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/fouziaahmed/Desktop/ml-models/image classification/ImageClassification.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/fouziaahmed/Desktop/ml-models/image%20classification/ImageClassification.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mx_train shape:\u001b[39m\u001b[39m'\u001b[39m, x_train\u001b[39m.\u001b[39mshape)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/fouziaahmed/Desktop/ml-models/image%20classification/ImageClassification.ipynb#W6sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39my_train shape:\u001b[39m\u001b[39m'\u001b[39m,y_train\u001b[39m.\u001b[39mshape)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/fouziaahmed/Desktop/ml-models/image%20classification/ImageClassification.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mx_test shape:\u001b[39m\u001b[39m'\u001b[39m, x_test\u001b[39m.\u001b[39mshape)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'x_train' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print('x_train shape:', x_train.shape)\n",
     "print('y_train shape:',y_train.shape)\n",
